# rust-perfect-endpoints

./: .env  Cargo.toml  README.md  docker-compose.yml
docker/node_red/: flows.json
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  product.rs  responders.rs  shopping_cart.rs  shopping_cart_product.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230926_000001_create_table_product.rs  m20230926_000002_create_table_shopping_cart.rs
src/: business.rs  database.rs  gateway.rs  infrastructure.rs  main.rs  test.rs  transport.rs
src/business/: product_by_id_use_case.rs  product_by_id_use_case_test.rs  product_price_quote_use_case.rs
src/gateway/: price_conversion_gateway.rs
src/infrastructure/: api_auth.rs  app_state.rs  default_response.rs
src/test/: product_by_id_use_case_test.rs  product_price_quote_use_case_test.rs
src/transport/: index_route.rs  product_by_id_route.rs  product_price_quote_route.rs
