[package]
name = "perfect-endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity"]

[dependencies]
## Local
migration = { path = "migration" }
entity = { path = "entity" }
## External
dotenvy = "0.15.7"
chrono = "0.4.31"
serde_json = "1.0.107"
async-trait = "0.1.73"
[dependencies.serde]
version = "1.0.188"
features = ["derive"]
[dependencies.reqwest]
version = "0.11.21"
features = [
    "json"
]
[dependencies.rocket]
version = "0.5.0-rc.3"
features = [
    "json",
    "serde_json"
]
[dependencies.sea-orm]
version = "0.12.2"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "mock",
]
