[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
rust_decimal = { version = "1.32.0" }

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.sea-orm]
version = "0.12.2" # sea-orm version